--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -8,4 +8,5 @@
 				<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="430px"/>
 		</pages>
 	</Carousel>
+	<Button text="Say Hello" press="onShowHello"/>
 </mvc:View>
