--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,8 @@
 <mvc:View 
 	displayBlock="true"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m">
+	xmlns="sap.m"
+	controllerName="opensap.myappsapui5.controller.App">
 	<Carousel>
 		<pages>
 				<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="400px"/>
