--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -9,7 +9,10 @@
 				<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="430px"/>
 		</pages>
 	</Carousel>
-	<Button text="Say Hello" press="onShowHello"/>
+	<Button 
+	text="{i18n>showHelloButtonText}"
+	press="onShowHello"/>
+	
 	<Input
 		value="{helloPanel>/recipient/name}"
 		description="Hello {helloPanel>/recipient/name}"
