--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,20 +1,25 @@
-<mvc:View 
-	displayBlock="true"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m"
-	controllerName="opensap.myappsapui5.controller.App">
-	<Carousel>
+<mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="opensap.myappsapui5.controller.App">
+	<App>
 		<pages>
-			<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="400px"/>
-			<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="430px"/>
+			<Page title="openSAP - Developing with SAPUI5">
+				<content>
+					<IconTabBar id="idTopLevelIconTabBar">
+						<items>
+							<IconTabFilter id="start" text="{i18n>gettingStartedFilter}">
+								<Carousel>
+									<pages>
+										<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="400px"/>
+										<Image src="https://upload.wikimedia.org/wikipedia/commons/0/0e/GEO_Globe_10.jpg" height="430px"/>
+									</pages>
+								</Carousel>
+								<Button text="{i18n>showHelloButtonText}" press="onShowHello"/>
+								<Input value="{helloPanel>/recipient/name}" description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="true" width="60%"/>
+							</IconTabFilter>
+							<IconTabFilter id="layouts" text="{i18n>layoutFilter}"></IconTabFilter>
+						</items>
+					</IconTabBar>
+				</content>
+			</Page>
 		</pages>
-	</Carousel>
-	<Button 
-		text="{i18n>showHelloButtonText}"
-		press="onShowHello"/>
-	<Input
-		value="{helloPanel>/recipient/name}"
-		description="Hello {helloPanel>/recipient/name}"
-		valueLiveUpdate="true"
-		width="60%"/>
+	</App>
 </mvc:View>
