--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,7 +4,7 @@
 		<pages>
 			<Page title="openSAP - Developing with SAPUI5">
 				<content>
-					<IconTabBar id="idTopLevelIconTabBar">
+					<IconTabBar id="idTopLevelIconTabBar" class="sapUiResponciveContentPadding">
 						<items>
 							<IconTabFilter id="start" text="{i18n>gettingStartedFilter}">
 								<Carousel>
@@ -40,7 +40,7 @@
 										</Select>
 									</f:content>
 								</f:SimpleForm>
-								<Toolbar>
+								<Toolbar class="sapUiSmallMarginTopButtom">
 									<ToolbarSpacer/>
 									<Button text="{i18n>layoutPublishButton}" type="Accept"/>
 									<Button text="{i18n>layoutDraftButton}"/>
