--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,7 +4,7 @@
 		<pages>
 			<Page title="openSAP - Developing with SAPUI5">
 				<content>
-					<IconTabBar id="idTopLevelIconTabBar" class="sapUiResponciveContentPadding">
+					<IconTabBar id="idTopLevelIconTabBar" selectedKey="db" class="sapUiResponsiveContentPadding">
 						<items>
 							<IconTabFilter id="start" text="{i18n>gettingStartedFilter}">
 								<Carousel>
@@ -18,7 +18,7 @@
 							</IconTabFilter>
 							<IconTabFilter id="layouts" text="{i18n>layoutFilter}">
 								<MessageStrip type="Information" showIcon="true" text="Here's a Form Layout inside an Icon Tab Bar …"/>
-								<f:SimpleForm id="simpleFormChange" title="Address" editable="true" class="editableForm">
+								<f:SimpleForm id="simpleFormChange" title="Address" editable="true" class="editableForm sapUiSmallMarginTopBottom">
 									<f:content>
 										<Label text="{i18n>layoutFormName}"/>
 										<Input value="{address>/Name}"/>
@@ -45,6 +45,18 @@
 									<Button text="{i18n>layoutPublishButton}" type="Accept"/>
 									<Button text="{i18n>layoutDraftButton}"/>
 								</Toolbar>
+							</IconTabFilter>
+							<IconTabFilter text="Data Binding" key="db">
+								<List headerText="Products" width="auto" items="{/ProductSet}">
+									<items>
+										<ObjectListItem 
+										title="{Name}"
+										number="{Price}"
+										intro="{ProductID}"
+										numberUnit="{CurrencyCode}">
+										</ObjectListItem>
+									</items>
+								</List>
 							</IconTabFilter>
 						</items>
 					</IconTabBar>
