Commit - numberState  1	EXPRESSION BINDING

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -52,6 +52,7 @@
 										<ObjectListItem 
 										title="{Name}"
 										number="{Price}"
+										numberState="{= ${Price} > 250 ? 'Error' : 'Success'}"
 										intro="{ProductID}"
 										numberUnit="{CurrencyCode}">
 										</ObjectListItem>
