--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -55,6 +55,17 @@
 										numberState="{= ${Price} > 250 ? 'Error' : 'Success'}"
 										intro="{ProductID}"
 										numberUnit="{CurrencyCode}">
+											<firstStatus>
+												<ObjectStatus
+													text="{
+														parts : [
+															{path : 'WeightUnit'},
+															{path: 'WeightMEasure'}
+													],
+													formatter : '.formatter.delivery'
+													}"
+												/>
+											</firstStatus>
 										</ObjectListItem>
 									</items>
 								</List>
