Commit - formatter  fix problem

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -58,9 +58,9 @@
 											<firstStatus>
 												<ObjectStatus
 													text="{
-														parts : [
+														parts: [
 															{path : 'WeightUnit'},
-															{path: 'WeightMEasure'}
+															{path : 'WeightMeasure'}
 													],
 													formatter : '.formatter.delivery'
 													}"
